Fixed alignment of lines on splash page

--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -80,7 +80,7 @@ $green: #1ed760;
   position: relative;
   min-height: 28px;
   width: 20px;
-  height: 55%;
+  height: 35px;
   border-bottom: 1px solid $lightgray;
 }
 
